# RipleyPlanetWarsBot

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  annabot.toml  latest_ratings.csv  main.py  matches.parquet  pyproject.toml  ripleybot.toml  simplebot.Dockerfile  simplebot.py  simplebot.toml  tag_new_version.py  tournament.py  tournament_ratings.csv  upload_bot.py
src/: data.rs  main.rs  state.rs
src/algorithms/: mod.rs  ripley.rs  ripley_001.rs  ripley_002.rs  simple.rs  util.rs
