[project]
name = "ripleyplanetwarsbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "basedpyright>=1.29.2",
    "ipython>=8.36.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "trueskill>=0.4.5",
]


[tool.pyright]
typeCheckingMode = "basic"
